<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">All Weather Zone</string>
    <string name="app_view_title">W Zone</string>
    <string name="app_setting_title">W Setting</string>
    <string name="action_settings">Settings</string>
    <string name="action_rate">Rate</string>
    <string name="action_share">Share</string>
    <string name="action_contact">Contact</string>
    <string name="action_pro_version">Pro Version</string>
    <string name="action_exit">Exit</string>
    <string name="progress_title">All Weather Zone</string>
    <string name="progress_message">Weather Info Parsing ...</string>
    <string name="gps_serach_button_text">My Location Weather</string>

</resources>