<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.anrosoft.game.wallpaper.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_rate"
        android:orderInCategory="100"
        android:title="@string/action_rate"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/action_contact"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_pro_version"
        android:orderInCategory="100"
        android:title="@string/action_pro_version"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never"/>
    <item
        android:id="@+id/share"
        android:icon="@drawable/shareicon"
        android:title="Share"
        app:showAsAction="always"/>
    <item
        android:id="@+id/setting"
        android:icon="@drawable/settingicon"
        android:title="Setting"
        app:showAsAction="always"/>

</menu>